force-app/main/default/objects/b2ble_cpq_cnctr__Log__c/b2ble_cpq_cnctr__Log__c.object-meta.xml
<CustomObject>
    <description>Custom object used for storing data associated to failed mapped records from CPQB2B syncing processes.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>