force-app/main/default/objects/b2ble_cpq_cnctr__Log__c/fields/b2ble_cpq_cnctr__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Error_Message__c</fullName>
    <description>Stores the error message that occurs when a record fails to update during the CPQ/B2B syncing process.</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>