force-app/main/default/objects/b2ble_cpq_cnctr__Log__c/fields/b2ble_cpq_cnctr__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Record_Id__c</fullName>
    <description>Represents the record id of the record that failed to update through CPQ/B2B syncing process.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>