force-app/main/default/objects/b2ble_cpq_cnctr__Log__c/fields/b2ble_cpq_cnctr__Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Source_Record_Id__c</fullName>
    <description>Stores the record Id of the source record from which data was attempted to be copied during the CPQ/B2B syncing process.</description>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>