force-app/main/default/objects/b2ble_cpq_cnctr__Log__c/fields/b2ble_cpq_cnctr__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Stack_Trace__c</fullName>
    <description>Stores the error stack trace message that was generated for the failed record.</description>
    <label>Stack Trace</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>