force-app/main/default/objects/b2ble_cpq_cnctr__Log__c/fields/b2ble_cpq_cnctr__Triggering_Event__c.field-meta.xml
<CustomField>
    <fullName>b2ble_cpq_cnctr__Triggering_Event__c</fullName>
    <description>Stores the triggering event type of the failed record.</description>
    <label>Triggering Event</label>
    <type>TextArea</type>
</CustomField>